install/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Mar 27 22:10:23 2026
*raw
:PREROUTING ACCEPT [3000492:1669513921]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.17.0.3/32 ! -i docker0 -j DROP
COMMIT
# Completed on Fri Mar 27 22:10:23 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Mar 27 22:10:23 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [405:68575]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -i tun10 -o tun1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun1 -o tun10 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -i tun1 -o ens6 -j ACCEPT
-A FORWARD -i ens6 -o tun1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
COMMIT
# Completed on Fri Mar 27 22:10:23 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Mar 27 22:10:23 2026
*nat
:PREROUTING ACCEPT [196034:15536666]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [54907:6699346]
:POSTROUTING ACCEPT [54912:6703123]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.0.1.0/30 -o tun10 -j MASQUERADE
COMMIT
# Completed on Fri Mar 27 22:10:23 2026
